--- a/css/Result.css
+++ b/css/Result.css
@@ -3,21 +3,22 @@
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 h1 {
-    font-size: 90px;
+    font-size: 70px;
     text-align: center;
     margin-bottom: 10px;
 }
 h2{
     font-size: 60px;
     color:#2a2f4f;
-    width: 500px;
+    width: 300px;
     padding: 20px;
+    border-radius: 20px;
 }
 body {
     margin-top: 120px;
     background-color:#2a2f4f ;
     color: white ;
-    font-size:50px;
+    font-size:30px;
     
 }
 .contanier{
@@ -30,7 +31,7 @@ ol {
 }
  li {
     margin: 30px;
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
     border: 3px solid white;
     width:auto
@@ -41,7 +42,7 @@ ol {
     margin-right: 30px;
  }
  .answer{
-    font-size: 30px;
+    font-size: 20px;
     float: right;
 
  }
@@ -52,7 +53,7 @@ ol {
  .correct{
     color:gold;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 20px;
 
  }
  .correct1 {
@@ -82,17 +83,18 @@ ol {
     border: none;
     display: flex;
     justify-content: right;
-    font-size: 40px;
+    font-size: 30px;
     color: gold;
  }
  #yourResult {
     color: gold;
     border: none;
-    font-size: 60px;
+    font-size: 40px;
  }
  .test {
    background-color: white;
-   margin: 60px 0;
+   margin: 50px 0;
+   font-size: 40px;
  }
 
  @media screen and (min-width: 481px) and (max-width: 768px) {  
@@ -122,6 +124,7 @@ ol {
   } 
   .test {
    margin: 30px 0 10px 0;
+   font-size: 30px;
  }
  .score {
    font-size: 20px;
@@ -159,6 +162,7 @@ ol {
   } 
   .test {
    margin: 30px 0 10px 0;
+   font-size: 20px;
  }
  .score {
    font-size: 12px;
