--- a/css/index.css
+++ b/css/index.css
@@ -1,137 +1,298 @@
-#img1 {
-    width:850px
+header {
+  background-color: #2a2f4f;
+  color: #fff;
+  padding: 1rem;
 }
+
+
+
+header h1 {
+  font-size: 1.5rem;
+}
+
+nav ul {
+  list-style: none;
+  margin-left: 80%;
+  display: inline-block;
+}
+
+nav li {
+  display: inline;
+  margin-right: 1rem;
+}
+
+
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: white;
+}
+
+
+
+#box {
+  display: grid;
+  grid-template-columns: 45% 45%;
+  justify-content: space-between;
+  margin-left: 50px;
+  gap: 10px;
+}
+
+.text {
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-left: 10px;
+}
+
 h1 {
-    margin: 150px 20px; 
-    font-size: 150px;
+  grid-column: 1/2;
+  height: 10%;
+  margin-top: 4%;
 }
-#container{
-    background-color:#2a2f4f;
-    color: whitesmoke;
-}
-h2 {
-    font-size: 70px;
-}
-h3 {
-    font-size: 40px;
-}
-#h3 {
-    margin-top: 50px; 
-    margin-left: 10%; 
-    font-size: 50px;
-}
-#par{
-    margin-top: 20px; 
-    margin-left: 10%; 
-    font-size: 30px;
-}
-#h3a{
-    margin-top: 200px; 
-    font-size: 50px;
-}
-#h3b{
-    margin-left: 10%; 
-    font-size: 50px;
-}
-.par1{
-    margin-left: 10%; 
-    font-size: 30px;
-}
-ul {
-    margin-left: 10%;
-    font-size: 30px;
-}
-#bt{
-    padding: 5px 20px; 
-    margin-bottom: 100px; 
-    margin-top:50px; 
-    border-radius: 10px; 
-    width:250px; 
-    height: 70px; 
-    font-size: 30px; 
-    font-family: 'Times New Roman', Times, serif;
+
+#name {
+  font-size: 30px;
+
 
 }
 
+.instruction {
+  font-size: 35px;
+}
+
+.exam {
+  margin-top: 20px;
+  justify-content: space-between;
+  font-size: 30px;
+  margin-top: 5%;
+}
+
+#backgroud {
+  grid-column: 2/3;
+}
+
+.imgbg {
+  width: 85%;
+  margin-bottom: 20px;
+}
+
+#strbtn {
+  background-color: #2a2f4f;
+  border-radius: 10px;
+  color: white;
+  width: 40%;
+  height: 10%;
+  border: #2a2f4f solid 1px;
+  font-size: large;
+  font-weight: bold;
+  margin-left: 5px;
+  margin-top: 0px;
+  cursor: pointer;
+}
+#regestrationbtn{
+  font-size: 25px;
+}
+#login{
+  font-size: 25px;
+}
+#strbtn:hover {
+  cursor: pointer;
+  background-color: rgb(6, 211, 242);
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+h1::after {
+  content: " ";
+  animation: animate 5s infinite ease-in-out;
+  animation-fill-mode: none;
+}
+
+@keyframes animate {
+  0% {
+    content: "W|";
+  }
+
+  8% {
+    content: "WE|";
+  }
+
+  16% {
+    content: "WEL|";
+  }
+
+  24% {
+    content: "WELC|";
+  }
+
+  32% {
+    content: "WELCO|";
+  }
+
+  40% {
+    content: "WELCOM|";
+  }
+
+  48% {
+    content: "WELCOME|";
+  }
+
+  56% {
+    content: "WELCOME |";
+  }
+
+  64% {
+    content: "WELCOME H|";
+  }
+
+  72% {
+    content: "WELCOME HE|";
+  }
+
+  80% {
+    content: "WELCOME HER|";
+  }
+
+  100% {
+    content: "WELCOME HERE |";
+  }
+}
+
+#strbtn:hover {
+  background-color: rgb(6, 211, 242);
+}
+
+#strbtn:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(10px);
+}
+
+/***************************************************Tablet****************************************************/
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-    #img1 {
-        width:400px
-    }
-    h1 {
-        margin: 150px 50px; 
-        font-size: 60px;
-    }  
-    h2 {
-        font-size: 50px;
-    }
-    h3 {
-        font-size: 30px;
-    }
-    #h3 {
 
-        font-size: 40px;
-    }
-    #par{
-        
-        font-size: 20px;
-    }
-    #h3a{
-        margin-top: 100px; 
-        font-size: 40px;
-    }
-    #h3b{
-        margin-left: 10%; 
-        font-size: 30px;
-    }
-    .par1{
-        margin-left: 10%; 
-        font-size: 20px;
-    }
-    ul {
-        font-size: 20px;
+  .imgbg {
+    height: 90%;
+    width: 100%;
+  }
+.welcome{
+  margin-top: 100px;
+}
+  #strbtn {
+    width: 60%;
+  }
 
-    }
+  .exam {
+    font-size: large;
+  }
+
+  #strbtn {
+    height: 40px;
+  }
+
+  .text {
+    gap: 25px;
+  }
+
+  .exam {
+    margin-top: 20px;
+    justify-content: space-between;
+    font-size: 25px;
+    margin-top: 5%;
+  }
+  #login{
+    font-size: 25px;
+    margin-left: -70px;
+    
+  }
+  #regestrationbtn{
+    font-size: 25px;
+  }
 }
 
-@media screen and (max-width: 480px){
-    #img1 {
-        width:300px
-    }
-    h1 {
-        margin: 50px 30px; 
-        font-size: 50px;
-        text-align: center;
-    }  
-    h2 {
-        font-size: 40px;
-    }
-    h3 {
-        font-size: 30px;
-    }
-    #h3 {
+/***************************************************Mobile****************************************************/
+@media screen and (max-width: 480px) {
 
-        font-size: 30px;
-    }
-    #par{
-        
-        font-size: 20px;
-    }
-    #h3a{
-        margin-top: 50px; 
-        margin-bottom: 20px;
-        font-size: 30px;
-    }
-    #h3b{
-        margin-left: 10%; 
-        font-size: 25px;
-    }
-    .par1{
-        margin-left: 10%; 
-        font-size: 20px;
-    }
-    ul {
-        font-size: 20px;
 
-    }
+  .btn {
+    display: inline;
+  }
+
+  .imglogo {
+    width: 80%;
+    margin: 0px;
+    margin-left: 20px;
+  }
+
+
+  #box {
+    display: inline;
+  }
+
+  .imgbg {
+    display: none;
+  }
+
+  #strbtn {
+    border-radius: 5px;
+    width: 50%;
+    height: 40px;
+    font-size: large;
+    font-weight: bold;
+    margin-left: 25%;
+    margin-top: 0;
+  }
+
+  #name {
+    font-size: 20px;
+
+
+  }
+
+  .instruction {
+    font-size: 22px;
+  }
+
+  .exam {
+    margin-top: 20px;
+    justify-content: space-between;
+    font-size: 15px;
+    margin-top: 5%;
+  }
+
+  #footer {
+    font-size: 8px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .welcome {
+    font-size: 20px;
+  }
+
+  header {
+    background-color: #2a2f4f;
+    color: #fff;
+    padding: 1rem;
+  }
+#login{
+  font-size: 15px;
+  margin-left: -70px;
+  
+}
+#regestrationbtn{
+  font-size: 15px;
+}
+
 }
